Getting error data from remote
