# APIGateway/api/controllers/stuff.js
@@ -6,28 +6,15 @@
 
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
-const defaultPipe = require('../helpers/defaultPipe')
 const mongodb = require('../../utilities/mongodb')
 const rabbitmq = require('../../utilities/rabbitmq')
-const Pipeline = require('pipes-and-filters')
+const asyncHelpers = require('../helpers/async')
 
 /*
  * Get stuff from our backend business microservice
  */
 const getStuff = (req, res) => {
-  const pipeline = defaultPipe.getPipelineInstance(logicToGetStuff, (err, result) => {
-    // This is executed at the end of the pipeline
-    // Implementing asynchronous behaviour over REST: http://restcookbook.com/Resources/asynchroneous-operations/
-    if (err) {
-      res.status(500).end()
-      return;
-    }
-
-    res.set('Location', req.path + '/' + result.requestId)
-    res.set('Access-Control-Expose-Headers', 'Location')
-    res.status(202).end()
-  })
-  pipeline.execute(req)
+  asyncHelpers.serveOriginalRequest(req, res, logicToGetStuff)
 }
 
 const logicToGetStuff = (input, next) => {
@@ -47,22 +34,7 @@ const logicToGetStuff = (input, next) => {
  * Get async result
  */
 const getStuffById = (req, res) => {
-  const pipeline = defaultPipe.getPipelineInstance(tryRetrieveResult, (err, result) => {
-    if (err) {
-      res.status(500).end()
-      return;
-    }
-
-    if (result) {
-      res.json(result)
-    } else {
-      //Try again later
-      res.set('Location', req.path)
-      res.set('Access-Control-Expose-Headers', 'Location')
-      res.status(202).end()
-    }
-  })
-  pipeline.execute(req)  
+  asyncHelpers.serveFinalRequest(req, res, tryRetrieveResult) 
 }
 
 const tryRetrieveResult = (input, next) => {
